[package]
name = "iterate_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.33"
serde = { version = "1.0.188", features = ["derive"] }
syn = { version = "2.0.31", features = ["derive"] }
